welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
			    if (estFaceMur())
                            ^SnakeBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
					 if (estFaceMur())
                                         ^SnakeBuggle:27: error: type mismatch;
 found   : Unit
 required: Boolean
			else { if (getDirection == Direction.OUEST)
                               ^